[tool.poetry]
name = "python-flask-demo"
version = "0.1.0"
description = "simple Flask backend to understand how to create CRUD APIs."
authors = ["Maruf Bepary <bepary71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
